# XiMonitor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.en.md  README.md  SECURITY.md  deny.toml  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
config/: agent.example.toml  server.example.toml
nodelite-agent/: Cargo.toml
nodelite-agent/src/: collector.rs  collector_linux.rs  collector_macos.rs  config_io.rs  lib.rs  main.rs  runtime.rs  session.rs  support.rs
nodelite-agent/src/collector/: shared.rs
nodelite-agent/tests/: config.rs  reconnect.rs  token_refresh.rs
nodelite-agent/tests/common/: mod.rs
nodelite-proto/src/: config.rs  lib.rs  message.rs  model.rs  netutil.rs  validation.rs
nodelite-server/: Cargo.toml  build.rs
nodelite-server/assets/: index-alert-settings.js  node.html  ui-i18n.json
nodelite-server/src/: admission.rs  agent_logs.rs  app_state.rs  auth.rs  cli.rs  encoding.rs  handlers.rs  history.rs  lib.rs  lib_tests.rs  load_test.rs  main.rs  qr.rs  registry.rs  sanitize.rs  snapshot.rs  startup.rs  state.rs  test_support.rs  ui.rs  web_assets.rs  ws.rs
nodelite-server/web/: README.md  index.html  package.json  pnpm-lock.yaml
scripts/: install-agent.sh  install-server.sh
ximonitor-agent/: Cargo.toml
ximonitor-agent/src/: collector.rs  main.rs
ximonitor-proto/: Cargo.toml
ximonitor-proto/src/: config.rs  lib.rs  message.rs  model.rs
ximonitor-server/: Cargo.toml
ximonitor-server/assets/: index.html  node.html  ui-i18n.json
ximonitor-server/src/: handlers.rs  (+10 more)
(+144 files in other folders)
