[package]
name = "nodelite-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "nodelite_agent"
path = "src/lib.rs"

[[bin]]
name = "nodelite-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
getrandom.workspace = true
libc.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
nodelite-proto = { path = "../nodelite-proto" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
